--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -1,17 +1,31 @@
 body
 {
+	background-image: url("../img/background.png");
+	font-family: Arial, Helvetica, sans-serif;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 36em;
+	max-width: 40em;
 	padding-left: 1em;
 	padding-right: 1em;
 }
 
 
-h1
+h1, h2, h3
 {
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 }
 
 
+.fb-login-button
+{
+	margin-left: auto;
+	margin-right: auto;
+	width: 8em;
+}
+
+
+#ClassyGames_GamesList, #ClassyGames_GamesList_YourTurn, #ClassyGames_GamesList_TheirTurn
+{
+	display: none;
+}
