--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -22,6 +22,7 @@ body
 h1, h2
 {
 	font-family: Arial, Helvetica, sans-serif;
+	letter-spacing: -0.08em;
 	text-align: center;
 }
 
@@ -41,6 +42,8 @@ h1
 h2
 {
 	color: #8A9AA1;
+	font-size: 1.75em;
+	text-transform: uppercase;
 }
 
 
@@ -66,6 +69,12 @@ h2
 }
 
 
+#ClassyGames_GamesList ul li:hover
+{
+	background-color: #DEE5E8;
+}
+
+
 #ClassyGames_GamesList div ul li img
 {
 	float: left;
@@ -74,22 +83,26 @@ h2
 }
 
 
+.ClassyGames_GamesList_Game_Name, .ClassyGames_GamesList_Game_Time
+{
+	float: left;
+	letter-spacing: 0.08em;
+	width: 83%;
+}
+
+
 .ClassyGames_GamesList_Game_Name
 {
 	color: #677379;
-	float: left;
 	font-weight: bold;
 	text-transform: uppercase;
-	width: 83%;
 }
 
 
 .ClassyGames_GamesList_Game_Time
 {
 	color: #8A9AA1;
-	float: left;
 	text-transform: lowercase;
-	width: 83%;
 }
 
 
