pieces are now showing on the game board!

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -46,6 +46,17 @@ h2
 }
 
 
+#ActionBar
+{
+	font-weight: bold;
+	margin-bottom: 1em;
+	margin-top: 2em;
+	text-align: center;
+	text-transform: lowercase;
+	visibility: hidden;
+}
+
+
 div.clear
 {
 	clear: both;
