--- a/public_html/assets/css/gameslist.css
+++ b/public_html/assets/css/gameslist.css
@@ -7,8 +7,8 @@
 #ClassyGames_GamesList ul
 {
 	list-style-type: none;
-	margin-left: 2em;
-	margin-right: 2em;
+	margin-left: 4em;
+	margin-right: 4em;
 	padding-left: 0em;
 }
 
@@ -17,6 +17,7 @@
 {
 	margin-bottom: 1.5em;
 	margin-top: 1.5em;
+	padding: 0.5em 0.25em;
 }
 
 
