bunch of random fixes really: refresh button games list works now and there's a back button on the game board page
done for the night

--- a/public_html/assets/css/gameslist.css
+++ b/public_html/assets/css/gameslist.css
@@ -24,6 +24,7 @@
 #ClassyGames_GamesList ul li:hover
 {
 	background-color: #DEE5E8;
+	cursor: pointer;
 }
 
 
@@ -55,4 +56,10 @@
 {
 	color: #8A9AA1;
 	text-transform: lowercase;
+}
+
+
+#ClassyGames_GamesList_ActionBar
+{
+	display: none;
 }
